# agentic-data-scientist

./: OLLAMA_README.md  README.md  pyproject.toml  setup.sh
examples/: quick_test.py  run_analysis.py
src/agentic_data_scientist/agents/adk/: agent.py  event_compression.py  implementation_loop.py  review_confirmation.py  utils.py
src/agentic_data_scientist/agents/claude_code/: __init__.py  agent.py  templates.py
src/agentic_data_scientist/agents/ollama_coding/: __init__.py  agent.py
src/agentic_data_scientist/cli/: main.py
src/agentic_data_scientist/core/: api.py
